# non-local-inpainting

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a_image_updating.cpp  a_image_updating.h  a_patch_distance.cpp  a_patch_distance.h  distance_transform.cpp  distance_transform.h  gaussian_weights.cpp  gaussian_weights.h  gradient.cpp  gradient.h  image.h  image.hpp  image_inpainting.cpp  image_inpainting.h  io_utility.cpp  io_utility.h  l1_norm_patch_distance.cpp  l1_norm_patch_distance.h  l2_combined_patch_distance.cpp  l2_combined_patch_distance.h  l2_norm_patch_distance.cpp  l2_norm_patch_distance.h  l2_rgbd_patch_distance.cpp  l2_rgbd_patch_distance.h  main.cpp  mask.cpp  mask.h  mask_iterator.cpp  mask_iterator.h  patch_match.cpp  patch_match.h  patch_non_local_depth.cpp  patch_non_local_depth.h  patch_non_local_means.cpp  patch_non_local_means.h  patch_non_local_medians.cpp  (+9 more)
